language/move-lang/tests/move_check/naming/unbound_struct_in_module.exp
error[E03003]: unbound module member
  ┌─ tests/move_check/naming/unbound_struct_in_module.move:6:16
  │
6 │     fun foo(s: X::S): X::S {
  │                ^^^^ Invalid module access. Unbound struct 'S' in module '0x2::X'

error[E03003]: unbound module member
  ┌─ tests/move_check/naming/unbound_struct_in_module.move:6:23
  │
6 │     fun foo(s: X::S): X::S {
  │                       ^^^^ Invalid module access. Unbound struct 'S' in module '0x2::X'

